--- a/it.html
+++ b/it.html
@@ -153,7 +153,7 @@
     function addItalianArticle(countryName) {
       const firstLetter = countryName.charAt(0).toLowerCase();
       const isVowel = 'aeiou'.indexOf(firstLetter) !== -1;
-      return isVowel ? `dall'${countryName}` : `da ${countryName}`;
+      return isVowel ? `di'${countryName}` : `di ${countryName}`;
     }
 
     async function displayCountryName() {
