--- a/fr.html
+++ b/fr.html
@@ -163,7 +163,7 @@
       const countries = await fetchCountries();
       const response = await fetch('https://ipinfo.io/json?token=228a7bb192c4fc');
       const data = await response.json();
-      const countryCode = data.country;
+      const countryCode = data.country.toLowerCase();
       const language = 'french'; // 更改为您想要显示的语言
 
       const countryName = getCountryNameByCode(countries, countryCode.toUpperCase(), language);
@@ -652,8 +652,8 @@
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">-->
-      <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile">
+      <!-- <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile"> -->
 
 
       <div class="doc-section" id="education">
