--- a/it.html
+++ b/it.html
@@ -160,7 +160,7 @@
       const countries = await fetchCountries();
       const response = await fetch('https://ipinfo.io/json?token=228a7bb192c4fc');
       const data = await response.json();
-      const countryCode = data.country;
+      const countryCode = data.country.toLowerCase();
       const language = 'italian'; // 更改为意大利语
 
       const countryName = getCountryNameByCode(countries, countryCode.toUpperCase(), language);
