--- a/ru.html
+++ b/ru.html
@@ -147,7 +147,7 @@
       const countries = await fetchCountries();
       const response = await fetch('https://ipinfo.io/json?token=228a7bb192c4fc');
       const data = await response.json();
-      const countryCode = data.country;
+      const countryCode = data.country.toLowerCase();
       const language = 'russian'; // 更改为您想要显示的语言
       const countryName = getCountryNameByCode(countries, countryCode.toUpperCase(), language);
       document.getElementById("location2").textContent = countryName;
