--- a/en-activities.html
+++ b/en-activities.html
@@ -399,7 +399,8 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Equity Research</small></a></li>
               </div>
 
-              <li><a href="en-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>CV</strong></small></a>
+              <li><a href="en-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Curriculum
+                      Vitae</strong></small></a>
               </li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                 <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#education-mobile"
@@ -412,7 +413,7 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Awards</small></a></li>
               </div>
 
-              <li><strong><a href="en-activities.html"><small><span>▸ Activities
+              <li><strong><a href="en-activities.html"><small><span>▸ Extracurriculars
                         ★</span></small></a></strong></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                 <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html">&nbsp;&nbsp;&nbsp;<small>•
@@ -446,7 +447,7 @@
       </div>
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Hey, Welcome! </text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Extracurriculars</text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
             <select id="languages" name="languages"
