--- a/en-research.html
+++ b/en-research.html
@@ -350,7 +350,8 @@
                 </li>
               </div>
 
-              <li><a href="en-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>CV</strong></small></a>
+              <li><a href="en-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Curriculum
+                      Vitae</strong></small></a>
               </li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                 <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#education-mobile"
@@ -364,7 +365,7 @@
               </div>
 
               <li><a href="en-activities.html"><small style="color: rgb(97, 97, 97);">▸
-                    <strong>Activities</strong></small></a></li>
+                    <strong>Extracurriculars</strong></small></a></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                 <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Speaking</small></a></li>
@@ -397,7 +398,7 @@
       </div>
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Hey, Welcome! </text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Research Progress</text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
             <select id="languages" name="languages"
