--- a/en-resume.html
+++ b/en-resume.html
@@ -364,7 +364,8 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Equity Research</small></a></li>
               </div>
 
-              <li><a href="en-resume.html"><strong><a href="en.html"><small>▸ CV ★</small></a></strong></a></li>
+              <li><a href="en-resume.html"><strong><a href="en.html"><small>▸ Curriculum Vitae
+                        ★</small></a></strong></a></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                 <li style="width: 50%; box-sizing: border-box;"><a
                     href="en-resume.html#education-mobile">&nbsp;&nbsp;&nbsp;<small>• Education</small></a></li>
@@ -377,7 +378,7 @@
               </div>
 
               <li><a href="en-activities.html"><small style="color: rgb(97, 97, 97);">▸
-                    <strong>Activities</strong></small></a></li>
+                    <strong>Extracurriculars</strong></small></a></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                 <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Speaking</small></a></li>
@@ -410,7 +411,7 @@
       </div>
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Hey, Welcome! </text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Curriculum Vitae </text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
             <select id="languages" name="languages"
