--- a/en.html
+++ b/en.html
@@ -416,7 +416,8 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Equity Research</small></a></li>
               </div>
 
-              <li><a href="en-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>CV</strong></small></a>
+              <li><a href="en-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Curriculum
+                      Vitae</strong></small></a>
               </li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                 <li style="width: 50%; box-sizing: border-box;"><a href="en-resume.html#education-mobile"
@@ -430,7 +431,7 @@
               </div>
 
               <li><a href="en-activities.html"><small style="color: rgb(97, 97, 97);">▸
-                    <strong>Activities</strong></small></a></li>
+                    <strong>Extracurriculars</strong></small></a></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                 <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html"
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Speaking</small></a></li>
