--- a/kr-contact.html
+++ b/kr-contact.html
@@ -294,8 +294,8 @@
         <h3 id="logo" style="text-align:center;">
           <img id="optionalstuff" src="images/banner_cns2_left.gif" width="155" />
           <div style="margin-bottom: 13px;"></div>
-          <h3 class="hidden-mobile" align="left"><ruby>徐<rt>쉬</rt></ruby> <ruby>泓<rt>홍</rt></ruby> <small><ruby>博 士<rt>
-                  에너지박사</rt></ruby></small></h3>
+          <h3 class="hidden-mobile" align="left"><ruby>徐<rt>쉬</rt></ruby> <ruby>泓<rt>홍</rt></ruby> <small><ruby>박 사<rt>
+                  재생에너지</rt></ruby></small></h3>
 
           <ul>
             <span style="display: block; height: 4px;"></span>
@@ -424,8 +424,8 @@
 
       <div class="topnav">
         <a href="kr-contact.html" class="active">
-          <h3 class="display-mobile"><ruby>徐<rt>쉬</rt></ruby> <ruby>泓<rt>홍</rt></ruby> <small><ruby>博 士<rt>에너지박사</rt>
-              </ruby></small></h3>
+          <h3 class="display-mobile"><ruby>徐<rt>쉬</rt></ruby> <ruby>泓<rt>홍</rt></ruby> <small><ruby>박 사<rt>
+                  재생에너지</rt></ruby></small></h3>
         </a>
         <div id="myLinks">
           <ul>
