--- a/kr-resume.html
+++ b/kr-resume.html
@@ -307,8 +307,8 @@
         <h3 id="logo" style="text-align:center;">
           <img id="optionalstuff" src="images/banner_cns5_left.gif" width="155" />
           <div style="margin-bottom: 13px;"></div>
-          <h3 class="hidden-mobile" align="left"><ruby>徐<rt>쉬</rt></ruby> <ruby>泓<rt>홍</rt></ruby> <small><ruby>博 士<rt>
-                  에너지박사</rt></ruby></small></h3>
+          <h3 class="hidden-mobile" align="left"><ruby>徐<rt>쉬</rt></ruby> <ruby>泓<rt>홍</rt></ruby> <small><ruby>박 사<rt>
+                  재생에너지</rt></ruby></small></h3>
 
           <ul>
             <span style="display: block; height: 4px;"></span>
@@ -382,8 +382,8 @@
 
       <div class="topnav">
         <a href="kr-resume.html" class="active">
-          <h3 class="display-mobile"><ruby>徐<rt>쉬</rt></ruby> <ruby>泓<rt>홍</rt></ruby> <small><ruby>博 士<rt>에너지박사</rt>
-              </ruby></small></h3>
+          <h3 class="display-mobile"><ruby>徐<rt>쉬</rt></ruby> <ruby>泓<rt>홍</rt></ruby> <small><ruby>박 사<rt>
+                  재생에너지</rt></ruby></small></h3>
         </a>
         <div id="myLinks">
           <ul>
@@ -453,7 +453,7 @@
       </div>
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ 이력 </text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ 안녕하세요! </text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
             <select id="languages" name="languages"
