--- a/en.html
+++ b/en.html
@@ -514,52 +514,45 @@
         </span>
       </p>
 
-      <!-- <p align="justify">
-        <span class="display-mobile">Welcome friends from <span id="location2"></span> :-)</br></br></span>
-        Dr. Hong Xu is a passionate <strong>Researcher</strong> and <strong>Engineer</strong> specializing in Renewable Energy and e-Power Systems, dedicated to achieving <strong>carbon neutrality</strong> in the <strong>energy and transportation</strong> sectors.
-
-        Currently, Dr. Hong Xu serves as a specialist engineer in the German industrial sector in the field of <strong>new energy power systems</strong>, dedicated to achieving <strong>carbon neutrality</strong> in the <strong>energy and transportation</strong> sectors. He chaired a session on "Chinese Energy Transition and Technological Innovation" at the <strong>United Nations Climate Change Conference in Bonn</strong> and participated in meetings of the <strong>United Nations Economic Commission for Europe's expert group on transport and climate</strong>. During his academic career, he collaborated with multinational corporations and Sino-European academic institutions to publish <strong>more than 15 papers</strong> and was cited <strong>over 280 times</strong>, earning <strong>3 patents</strong>. He also serves as a <strong>reviewer</strong> for 7 high-impact journals in the energy and transportation fields and as an <strong>academic reviewer</strong> for the <strong>St. Gallen International Economic Forum</strong>. He has received invitations and travel awards from the American Chemical Society, Intel Edge AI Scholarship, Erasmus+ Scholarship, and the "Challenge Cup" Entrepreneurship National Bronze Award in China, among others.
-      </p>
-      
-      <p align="justify">
-        In early 2021, he obtained his <strong><a href="https://ethz.ch/en.html" target="_blank">Ph.D. degree</a></strong> from <strong><a href="https://electrochemistry.ethz.ch/people/person-detail.html?persid=177926" target="_blank">ETH Zurich</a></strong>, under the supervision of Professor <strong>Thomas Schmidt</strong> at the Swiss Competence Center for Energy Research. His academic research during his undergraduate, master's, and doctoral studies focused on the fields of <strong>carbon neutrality/new energy</strong>. He has worked/interned at international institutions such as <strong><a href="https://psi.ch" target="_blank">Paul Scherrer Institute, Switzerland</a></strong>, <strong><a href="https://oxfordenergy.org" target="_blank">Oxford Institute for Energy Studies, UK</a></strong>, <strong><a href="https://tum.de" target="_blank">Technical University of Munich, Germany</a></strong>, <strong><a href="https://ecoledesponts.fr/en" target="_blank">École des Ponts ParisTech, France</a></strong>, <strong><a href="https://xfel.eu" target="_blank">European XFEL, EU</a></strong>, and collaborated deeply with multinational companies such as <strong>Toyota Motor Corporation, Japan</strong>, <strong>Infineon Technologies AG, Germany</strong>, <strong>Continental AG, Germany</strong>, etc. Additionally, he was admitted to a full scholarship for remote learning at the <strong><a href="https://quantic.edu/mba" target="_blank">Quantic School of Business</a></strong> in the United States and awarded an <strong>MBA</strong> degree, studied "Green Transformation" business management courses at the <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">Cambridge Judge Business School</a></strong> as a Santander Bank Scholar, and conducted in-depth stock/industry research reports at a leading securities institute (A-share & US stocks) and engaged in venture capital practice in the new energy sector in a dual-currency fund (seed round➔Series A).
-      </p> -->
-
-
       <p align="justify">
         <span class="display-mobile">Greetings, friends from <span id="location2">the World</span>! <br><br></span>
 
-        Currently, Dr. Hong Xu serves as an <strong>R&D Engineer</strong> specializing in <strong>e-Power
-          Systems</strong> based in Munich, dedicated to achieving carbon neutrality in the <strong>Energy</strong> and
-        <strong>Transport</strong> sectors. Throughout his career, he has worked with international corporations and
-        academic institutions in Europe and China, achieving <strong><span class="no_of_papers"></span> published
-          papers</strong> and <strong><span class="no_of_patents"></span>
-          granted patents</strong>. Moreover, he chaired a session at the
-        <strong><a href="https://unfccc.int/" target="_blank">UN Climate Change Conference</a></strong> in Bonn,
-        participated Group of Experts at the <strong><a href="https://unece.org/" target="_blank">UN Economic Commission
-            for Europe</a></strong> based in Geneva, and served as an <strong>Academic Jury</strong> at the <strong><a
-            href="https://symposium.org/" target="_blank">St. Gallen Symposium</a></strong> in Switzerland. Dr. Xu is
-        also a Peer <strong>Reviewer</strong> for several high-impact journals in the <strong>Energy</strong>,
-        <strong>Transport</strong>, and <strong>Sustainability</strong> fields. His interdisciplinary efforts have been
-        recognized with awards including the Santander Bank Scholarship, ECS Invited Paper and Travel Grant, Intel Edge
-        AI Scholarship, Erasmus Scholarship, and etc.
-      </p>
+        Dr. Hong Xu is a passionate <strong>Researcher</strong> and <strong>Engineer</strong> specializing in
+        <strong>Renewable Energy</strong> and <strong>e-Power Systems</strong>, striving for Efficiency Excellence and
+        Carbon Neutrality within the Energy and Transport sectors. Over the past 10 years, he has worked with
+        multinational corporations and leading institutions across the Eurasian continent, driving technical
+        advancements in <strong>e-Mobility</strong>, <strong>Clean Energy</strong>, and <strong>New Materials</strong>
+        industries with <strong>15 papers</strong> published and <strong>3 patents</strong> granted. Alongside his
+        engineering pursuits, Dr. Xu has
+        engaged with renowned organizations, notably St. Gallen Symposium, Salzburg Global Seminar, CITIC Securities,
+        and Oxford Institute for Energy Studies, focusing on Clean <strong>Energy Economics and Policy</strong> analysis
+        in Asia and
+        Europe. As a proactive contributor to international development, Dr. Xu has served as Group of Experts (GE)
+        Member at
+        the <strong><a href="https://unece.org/" target="_blank">UN Economic Commission
+            for Europe</a></strong> (UNECE) in Geneva, and chaired parallel sessions at the <strong><a
+            href="https://unfccc.int/" target="_blank">UN Climate Change Conference</a></strong> (UNFCCC) in Bonn,
+        advocating for <strong><a href="https://sdgs.un.org/goals" target="_blank">UN Sustainable Development
+            Goals</a></strong> (SDGs) <strong>7 </strong>(Affordable Energy), <strong>9 </strong>(Industry Innovation),
+        and
+        <strong>13 </strong>(Climate Action).
 
       <p align="justify">
-        He pursued his PhD in <strong>Renewable Energy</strong> from <strong><a href="https://ethz.ch/en.html"
-            target="_blank">ETH Zurich</a></strong>, in collaboration with the <strong><a href="https://psi.ch"
-            target="_blank">Paul Scherrer Institute</a></strong> in Switzerland. Prior to that, he received a Master's
-        Degree in Materials Science from the <strong><a href="https://tum.de" target="_blank">Technical University of
+        A scholar by heart, he pursued his PhD in <strong>Renewable Energy</strong> from <strong><a
+            href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a></strong>, in collaboration with the <strong><a
+            href="https://psi.ch" target="_blank">Paul Scherrer Institute</a></strong> in Switzerland. Prior to that, he
+        received an MSc in Materials Science from the <strong><a href="https://tum.de" target="_blank">Technical
+            University of
             Munich</a></strong> with internships at the <strong><a href="https://xfel.eu" target="_blank">European
             XFEL</a></strong> and <strong><a href="https://infineon.com" target="_blank">Infineon</a></strong> in
-        Germany. Dr. Xu's passion for impactful research has led to long-term engagement with industry leaders in
+        Germany. His passion for impactful research has led to long-term engagement with industry leaders in
         hydrogen and fuel cells, including <strong>Toyota Motor</strong> in Japan and <strong>Freudenberg Group</strong>
-        in Germany. In parallel, he pursued an <strong>MBA</strong> at the <strong><a href="https://quantic.edu/mba"
-            target="_blank">Quantic School of Business</a></strong> and completed Executive Courses at the <strong><a
-            href="https://www.jbs.cam.ac.uk/" target="_blank">Cambridge Judge Business School</a></strong>, gaining
-        practical experience at a dual-currency venture capital firm and a leading securities company in China.
+        in Germany. In pursuit of interdisciplinary horizons, he earned an <strong>MBA</strong> at the <strong><a
+            href="https://quantic.edu/mba" target="_blank">Quantic School of Business</a></strong> with further
+        Executive Education at the <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">Cambridge Judge Business
+            School</a></strong>, gaining
+        practical experience at dual-currency venture capital firm and leading securities company in China.
       </p>
-
 
 
       <p style="text-align:left;">
