--- a/jp.html
+++ b/jp.html
@@ -356,11 +356,11 @@
       <div class="image-wrapper hidden-mobile">
         <img src="images/banner_cns3.gif" width="800" alt="banner Image" />
       
-        <div style="position:absolute;top:20%;left:3.5%;font-family:'Times New Roman',serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">世界 には 2種類 の<br>ゲーム がある</div>
-        <div style="position:absolute;bottom:22%;left:3.5%;font-family:'Times New Roman',serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">有限 vs 無限<br>のゲーム</div>
-        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Times New Roman',serif;font-size:14px;font-weight:bold;color:white;">♾️
+        <div style="position:absolute;top:20%;left:3.5%;font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">世界 には 2種類 の<br>ゲーム がある</div>
+        <div style="position:absolute;bottom:22%;left:3.5%;font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">有限 vs 無限<br>のゲーム</div>
+        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:white;">♾️
         </div>
-        <div style="position:absolute;bottom:7%;right:3.5%;font-family:'Times New Roman',serif;font-size:14px;font-weight:bold;color:rgb(198,198,198);"></div>
+        <div style="position:absolute;bottom:7%;right:3.5%;font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:rgb(198,198,198);"></div>
       
         <!-- 橙色長条 bar -->
         <div style="position:absolute;top:50%;left:3.5%;transform:translateY(-50%);width:130px;height:3px;background-color:orange;opacity:1;border-radius:0;"></div>
