--- a/kr.html
+++ b/kr.html
@@ -364,11 +364,11 @@
       <div class="image-wrapper hidden-mobile">
         <img src="images/banner_cns3.gif" width="800" alt="banner Image" />
       
-        <div style="position:absolute;top:20%;left:3.5%;font-family:'Times New Roman',serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">세상에는 두 종류의 <br>게임이 있다 </div>
-        <div style="position:absolute;bottom:22%;left:3.5%;font-family:'Times New Roman',serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">유한 및 무한<br>의 게임</div>
-        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Times New Roman',serif;font-size:14px;font-weight:bold;color:white;">♾️
+        <div style="position:absolute;top:20%;left:3.5%;font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">세상에는 두 종류의 <br>게임이 있다 </div>
+        <div style="position:absolute;bottom:22%;left:3.5%;font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">유한 및 무한<br>의 게임</div>
+        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:white;">♾️
         </div>
-        <div style="position:absolute;bottom:7%;right:3.5%;font-family:'Times New Roman',serif;font-size:14px;font-weight:bold;color:rgb(198,198,198);"></div>
+        <div style="position:absolute;bottom:7%;right:3.5%;font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:rgb(198,198,198);"></div>
       
         <!-- 주황색 바 -->
         <div style="position:absolute;top:50%;left:3.5%;transform:translateY(-50%);width:130px;height:3px;background-color:orange;opacity:1;border-radius:0;"></div>
