--- a/jp.html
+++ b/jp.html
@@ -19,6 +19,7 @@
   ================================================== -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+
   <!-- CSS
   ================================================== -->
   <link rel="stylesheet" href="stylesheets/base.css">
@@ -30,6 +31,7 @@
   <link rel="stylesheet" href="stylesheets/type.css">
   <link rel="stylesheet" href="stylesheets/slider.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;700&display=swap" rel="stylesheet">
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -356,11 +358,11 @@
       <div class="image-wrapper hidden-mobile">
         <img src="images/banner_cns3.gif" width="800" alt="banner Image" />
       
-        <div style="position:absolute;top:20%;left:3.5%;font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">世界 には 2種類 の<br>ゲーム がある</div>
-        <div style="position:absolute;bottom:22%;left:3.5%;font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">有限 vs 無限<br>のゲーム</div>
-        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:white;">♾️
+        <div style="position:absolute;top:20%;left:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">世界 には 2種類 の<br>ゲーム がある</div>
+        <div style="position:absolute;bottom:22%;left:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">有限 vs 無限<br>のゲーム</div>
+        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:white;">♾️
         </div>
-        <div style="position:absolute;bottom:7%;right:3.5%;font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:rgb(198,198,198);"></div>
+        <div style="position:absolute;bottom:7%;right:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:rgb(198,198,198);"></div>
       
         <!-- 橙色長条 bar -->
         <div style="position:absolute;top:50%;left:3.5%;transform:translateY(-50%);width:130px;height:3px;background-color:orange;opacity:1;border-radius:0;"></div>
