--- a/cn-contact.html
+++ b/cn-contact.html
@@ -254,11 +254,51 @@
     </a>
   </div>
 
-    <!-- 占位符 -->
+    <!-- Home -->
     <div>
-      <a class='slide' href='#'>
-        <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-        <span class='name'></span>
+      <a class='slide' href='cn.html'>
+        <span class='element'>H</span>
+        <span class='name'>Home<br>首页</span>
+      </a>
+    </div>
+
+    <!-- Research -->
+    <div>
+      <a class='slide' href='cn-research.html'>
+        <span class='element'>Re</span>
+        <span class='name'>Research<br>研究</span>
+      </a>
+    </div>
+
+    <!-- Publications -->
+    <div>
+      <a class='slide' href='cn-research.html#publications'>
+        <span class='element'>Pb</span>
+        <span class='name'>Publications<br>出版物</span>
+      </a>
+    </div>
+
+    <!-- Education -->
+    <div>
+      <a class='slide' href='cn-resume.html'>
+        <span class='element'>Ed</span>
+        <span class='name'>Education<br>教育背景</span>
+      </a>
+    </div>
+
+    <!-- Activities -->
+    <div>
+      <a class='slide' href='cn-activities.html'>
+        <span class='element'>At</span>
+        <span class='name'>Activities<br>活动</span>
+      </a>
+    </div>
+
+    <!-- Contact -->
+    <div>
+      <a class='slide' href='cn-contact.html'>
+        <span class='element'>Co</span>
+        <span class='name'>Contact<br>联系我</span>
       </a>
     </div>
 
