--- a/en.html
+++ b/en.html
@@ -631,8 +631,8 @@
       </div>
 
       
-      <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:14px">➔ Welcome friends from <span id="location2">the World</span>! <img style="float:right;height:14px;margin-top:2px;" id="country-flag-local-storage" src="./images/wflags/un.png"></text>
+      <p class="display-mobile" style="text-align:left;margin-bottom:20px;margin-top:5px;">
+        <text style="color:rgb(237, 118, 7);font-size:14px">➔ Welcome friends from <span id="location2">the World</span>! <img style="float:right;height:14px;margin-top:4px;" id="country-flag-local-storage" src="./images/wflags/un.png"></text>
           <span style="float:right;">
            <!-- <span id="date-display-2"></span> -->
           </span>
